src/main/kotlin/com/example/frontServer/dto/error/FrontStatusDetailResponse.kt
package com.example.frontServer.dto.error

open class FrontStatusDetailResponse(
    open val statusDetailsCode: Long,
    open val message: String?,
)